<resources>
    <string name="app_name">WhatSapp</string>
    <string name="google_maps_key" translatable="false">AIzaSyDkzVKRY-iN6sW9tLcFynJFyaVFkhaKMcM</string>
    <string name="google_fcm_server_key" translatable="false">AAAAY_GeL2E:APA91bFICCM3RnpEA7NUdJhTrT4_wj8N6YSPoIEY4qqKmU0hOjY5SMrLZtjt8v0JeW4aY3Ezl3Xv5Cm9GWbij-nh4n26mPQ3_AmP6dnFUJJiqrM4sNDUFxjBKGz-3yVQUZaI9bsdY2Rs</string>
    <string name="connection_title">No internet connection</string>
    <string name="connection_not_available">It seems that you are not connected to the Internet. Kindly check your network settings.</string>
    <string name="btn_ok">OK</string>
    <string name="hint_email_signup">Email</string>
    <string name="forgot_PIN">Forgot PIN?</string>
    <string name="or"><b><u>OR</u></b></string>
    <string name="st_signup">SIGN UP</string>
    <string name="st_sign_in_reg">SignIn</string>
    <string name="default_notification_channel_id">Somerce</string>
    <string name="logout_msg">Are you sure want to logout?</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="menu">Menu</string>
    <string name="clear">Clear</string>
    <string name="nav_home">Home</string>
    <string name="nav_orders">Orders</string>
    <string name="nav_delivery">Delivery</string>
    <string name="nav_profile">Profile</string>
    <string name="permission_setting">Permission Setting</string>
    <string name="settings">Settings</string>
    <string name="setting">Setting</string>
    <string name="back">Back</string>
    <string name="retry">Retry</string>
    <string name="need_permission_title">Need permission(s)</string>
    <string name="err_need_permission_msg">You have previously declined this permission.\nYou must approve this permission in \"Permissions\" in the app settings on your device.</string>
    <string name="btn_cancel">Cancel</string>
    <string name="msg_session_time_out">Session Time Out</string>
    <string name="err_pass">Enter Valid Password</string>
    <string name="err_pass_min">Min character of password must be 7</string>
    <string name="cancel">Cancel</string>
    <string name="log_out">Logout</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="choose_gallery">Pick From Gallery</string>
    <string name="choose_camera">Take From Camera</string>
    <string name="pending">Pending</string>
    <string name="err_select_image">Select Image</string>
    <string name="options">Options</string>
    <string name="down">Drop Down</string>
    <string name="home">Home</string>
    <string name="google">Google</string>
    <string name="user_profile_name">Marie Jane</string>
    <string name="email_id">marie@gmail.com</string>
    <string name="select_shop">Select Shop</string>
    <string name="shop_list">Shop List</string>
    <string name="addshop">Add Shop </string>
    <string name="shop_profile">Shop Profile</string>
    <string name="user_profile">User Profile</string>
    <string name="maintenance">Maintenance</string>
    <string name="add_maintenance">Add Maintenance</string>
    <string name="parking">Parking</string>
    <string name="hisab">Hisab</string>
    <string name="users">Users</string>
    <string name="add_payment">Add Payment</string>
    <string name="add_employee">Add Employee</string>
    <string name="add_events">Add Events</string>
    <string name="employers_list">Employers List</string>
    <string name="employers_profile">Employers Profile</string>
    <string name="complainst_list">Complaint List</string>
    <string name="add_complainst">Add Complaint</string>
    <string name="edit_complainst">Edit Complaint</string>
    <string name="employers">Employers</string>
    <string name="complaints">Complaints</string>
    <string name="events">Events</string>
    <string name="welcome_to">Welcome to</string>
    <string name="amazing_star">Amazing Star</string>
    <string name="login_with_gmail">Login with Google</string>
    <string name="power_by">Developed By</string>
    <string name="www_kartuminfotech_com"><u>www.kartuminfotech.com</u></string>
    <string name="hello_everyone">Hello Everyone \nAll members announced today meeting for \nmaintenance so pleace come on time.</string>
    <string name="shop_image_is_required">Shop Image is Required</string>
    <string name="shop_name_required">Shop Name is Required</string>
    <string name="shop_number_is_required">Shop Number is Required</string>
    <string name="employee_image_is_required">Employee Image is Required</string>
    <string name="employee_name_is_required">Employee Name is Required</string>
    <string name="amount_field_is_required">Amount field is Required</string>
    <string name="employee_number_is_required">Employee Number is Required</string>
    <string name="events_title">Event Title is Required</string>
    <string name="events_detail">Event Detail is Required</string>
    <string name="vehicle_type_not_selected">vehicle type not selected</string>
    <string name="vehicle_number_is_required">Vehicle Number is Required</string>
    <string name="complaint_field_required">Complaint Field is Required</string>
    <string name="amount_is_required">Amount is Required</string>
    <string name="month_required">Month is Required</string>
    <string name="date_required">Date is Required</string>
    <string name="select_employer_service">Select Employer Service</string>
    <string name="maintenance_amount_field_required">Maintenance amount Field is Required</string>
    <string-array name="items_spinner_add">
        <item>Select Employer Service</item>
        <item>Watchman</item>
        <item>Cleaner</item>
        <item>Plumber</item>
    </string-array>
    <string-array name="items_spinner_off">
        <item>Please Choose your Office</item>
        <item>B1</item>
        <item>B2</item>
        <item>B3</item>
    </string-array>
    <string-array name="items_spinner_mon">
        <item>Select Month</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="items_spinner_name">
        <item>Select Employee Name</item>
        <item>Bharatbhai(Watchman)</item>
        <item>Darshanbhai(Cleaner)</item>
        <item>RahulBhai(Plumber)</item>
    </string-array>
    <string-array name="items_spinner_payment">
        <item>Salary</item>
        <item>Upad</item>
    </string-array>
    <string-array name="items_spinner_type">
        <item>Parking</item>
        <item>Toilet</item>
        <item>Cleaning</item>
        <item>Water</item>
        <item>Light</item>
        <item>Lift</item>
    </string-array>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="edit_vehicle">Edit Vehicle</string>
    <string name="cycle">Cycle</string>
    <string name="rickshaw">Rickshaw</string>
    <string name="_4_wheel">4 Wheel</string>
    <string name="_2_wheel">2 Wheel</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="enter_vehicle_number">Enter Vehicle Number</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="office">Office</string>
    <string name="enter_your_vehicle_image">Enter Your Vehicle Image</string>
    <string name="add_employer_profile">Add Employer Profile</string>
    <string name="full_name">Full Name</string>
    <string name="shop_name">Shop Name</string>
    <string name="shop_no">Shop Number</string>
    <string name="phone">Phone</string>
    <string name="select_service">Select Service</string>
    <string name="enter_employer_name">Enter Employer Name</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_shop_name">Enter Shop Name</string>
    <string name="enter_shop_no">Enter Shop Number</string>
    <string name="employer_name">Employer Name</string>
    <string name="payment_type">Payment Types</string>
    <string name="amount">Amount</string>
    <string name="enter_your_amount">Enter Your Amount</string>
    <string name="complaint_type">Complaint Type</string>
    <string name="your_complaint">Your Complaint</string>
    <string name="enter_your_complaint_in_deail">enter your complaint in deail</string>
    <string name="add_image">Add Image</string>
    <string name="comp_image">Complaint Image</string>
    <string name="attach_image_here">Attach image here</string>
    <string name="cleaing">Cleaing</string>
    <string name="a_complainst">A Complaint was filed before as well against the\ncleaing service provider. But we did not have any\npositive reponse or improvemnet.</string>
    <string name="mobile_app_amp_web_devlopment"><![CDATA[Mobile App & Web Devlopment]]></string>
    <string name="pay_mainteance">Pay Maintenance</string>
    <string name="month">Month</string>
    <string name="please_enter_amount">Please Enter Amount</string>
    <string name="dd_mm_yyy">DD/MM/YYYY</string>
    <string name="kartum_infotech">Kartum Infotech</string>
    <string name="shop_number">Shop Number</string>
    <string name="shop_holder">Shop Holder</string>
    <string name="bhavesh_hirpara">Bhavesh Hirpara</string>
    <string name="owner">Owner</string>
    <string name="record">Record</string>
    <string name="continue_btn">Continue</string>
    <string name="pay_now">Pay Now</string>
    <string name="add">Add</string>
    <string-array name="items_spinner_office">
        <item>Select Office</item>
        <item>Office</item>
        <item>Apartment</item>
    </string-array>
    <string-array name="radio_buttons">
        <item>button_1</item>
        <item>button_2</item>
        <item>button_3</item>
        <item>button_4</item>
        <item>button_5</item>
    </string-array>
    <string name="ok">Ok</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="all">All</string>
    <string name="add_events_title">Add Events Title</string>
    <string name="add_mobile_no">Add Mobile Number</string>
    <string name="events_titles">Events Title</string>
    <string name="events_details">Events Details</string>
    <string name="enter_events_title">Enter Events Title</string>
    <string name="enter_mobile_no">Enter Mobile Number</string>
    <string name="may_5_2020_10_30_am">May 5, 2020 @ 10:30 AM</string>
    <string name="please_choose_your_office">Please choose your office</string>
    <string name="credit">credit</string>
    <string name="debit">debit</string>
    <string name="update">Update Successfully</string>
    <string name="your_account_is_sent_for_approval">Your Account is sent for Approval.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="please_enter_number_of_employee">Please Enter Number of Employee</string>
    <string name="please_enter_square_feet">Please Enter Square feet</string>
    <string name="emp">Emp</string>
    <string name="square_feet">Square feet</string>
    <string name="please_enter_owner_phone">Please Enter Owner Phone</string>
    <string name="owner_phone">Owner Phone</string>
    <string name="please_enter_owner_email">Please Enter Owner Email</string>
    <string name="owner_email">Owner Email</string>
</resources>