<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/white"
    android:elevation="@dimen/dp5"
    android:gravity="center"
    android:maxHeight="@dimen/dp300"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/dp10"
    app:cardPreventCornerOverlap="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <com.chat.custom.CTextView
                android:id="@+id/dialogtitle"
                style="@style/txt_main_bg_18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/app_name" />

        </LinearLayout>

        <EditText
            android:id="@+id/editSearch"
            style="@style/txt_333_14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/squere_edittext"
            android:hint="@string/search"
            android:padding="12dp"
            android:singleLine="true"
            android:textCursorDrawable="@null" />

        <com.chat.custom.CTextView
            android:id="@+id/dialogClear"
            style="@style/txt_fff_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="@string/clear"
            android:visibility="gone" />


        <ListView
            android:id="@+id/lvSpinner"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:cacheColorHint="@android:color/transparent"
            android:divider="@color/list_devider"
            android:dividerHeight="1px"
            android:fadingEdge="none"
            android:fastScrollAlwaysVisible="false"
            android:fastScrollEnabled="true"
            android:overScrollMode="never"
            android:padding="@dimen/dp10"
            android:scrollbars="none"
            tools:listitem="@layout/spinner_item" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:orientation="horizontal">

            <com.chat.custom.CButtonViewB
                android:id="@+id/okBtn"
                style="@style/txt_fff_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/bg_continue"
                android:gravity="center"
                android:padding="@dimen/_4sdp"
                android:singleLine="true"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:visibility="visible" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>