<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewClickHandler"
            type="com.chat.ui.login.viewmodel.LoginViewModel.ViewClickHandler" />

        <variable
            name="viewModel"
            type="com.chat.ui.login.viewmodel.LoginViewModel" />
    </data>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.view.LoginActivity">


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/backgroundlogincopy"
            android:visibility="visible" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_140sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_10sdp"
            android:src="@drawable/amzlogo"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_230sdp"
            android:layout_gravity="bottom"
            android:background="@drawable/ll_bg_login"
            android:orientation="vertical"
            android:visibility="visible">

            <com.chat.custom.CTextViewB
                style="@style/txt_fff_22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:singleLine="true"
                android:text="@string/welcome_to" />

            <com.chat.custom.CTextViewB
                style="@style/txt_fff_22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:singleLine="true"
                android:text="@string/amazing_star" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/border_bg_white"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:src="@drawable/circle_google"
                    android:visibility="visible" />

                <com.chat.custom.CTextViewB
                    style="@style/txt_main_bg_14"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:layout_weight="1"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:singleLine="true"
                    android:text="@string/login_with_gmail" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_baseline_arrow_forward_24"
                    android:visibility="visible" />


            </LinearLayout>

            <com.chat.custom.CTextViewB
                style="@style/txt_gray_dark_11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:paddingTop="@dimen/_4sdp"
                android:paddingBottom="@dimen/_4sdp"
                android:singleLine="true"
                android:text="@string/power_by" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="@dimen/_10sdp"
                android:orientation="horizontal">


                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/kartum_icon_square"
                    android:visibility="visible" />

                <com.chat.custom.CTextViewB
                    style="@style/txt_fff_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:singleLine="true"
                    android:text="@string/www_kartuminfotech_com" />


            </LinearLayout>

        </LinearLayout>
    </FrameLayout>
</layout>